# django-bootcamp-ztm

./: README.md
code/config/: pyproject.toml
code/config/config/: settings.py  urls.py
code/config/my_app/: views.py
code/job_board/: db.sqlite3
code/link_shortener/: pyproject.toml
code/link_shortener/link_shortener/: settings.py
code/link_shortener/links/: models.py
notes/django-bootcamp-ztm/: Accessing Variables in Django Templates.md  Adding Dynamic URL Routing.md  Adding Filters to the Job Listings to Update Formatting.md  Adding Image to About Page.md  Adding New Field to Job Posting Table.md  Adding Our First Job Posting to the Database.md  Adding URLs and Views.md  Allowing Our Images to Show.md  Bash versus Powershell.md  Build Django Projects Quickly from the Browser using Replit.md  CRUD Job Postings using Django Admin.md  Create About Page Solution.md  Creating Job Posting Model.md  Creating Navigation Using Template Inheritance.md  Creating Our Link App and Models.md  Creating an Admin Super User Etc.md  Django Bootcamp - ZTM.md  Django Project Setup.md  Django Template Inheritance Overview.md  Django Template Variables, Tags, and Filters Overview.md  Dynamic URLs.md  Exercise - Dynamic URLs - Add 2 Numbers Solution.md  Git Bash Terminal.md  Grabbing the Active Job Posting in Our View.md  Handling "Does Not Exist" Error for Job Details.md  How Django Templates Work.md  Intro to Web Servers.md  Introduction.md  Job Board Project and App Setup.md  Job Detail Pages.md  Launching Our Project Live on the Server.md  Listing Out Our Favorite Movies.md  (+28 more)
(+16 files in other folders)
